// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Detox server integration "app" connects first, and then disconnects 1`] = `"registered a new connection."`;

exports[`Detox server integration "tester" connects first, and then disconnects 1`] = `"registered a new connection."`;

exports[`Detox server integration edge cases .registerSession - calling twice 1`] = `
"DetoxInternalError: Cannot login the same WebSocket instance twice into the same session.
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;

exports[`Detox server integration edge cases app dispatches "ready" action before login 1`] = `"The app has dispatched \\"ready\\" action too early."`;

exports[`Detox server integration edge cases attempt to register the same connection twice 1`] = `
"DetoxInternalError: Cannot register the same WebSocket instance twice.
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;

exports[`Detox server integration edge cases attempt to unregister an unknown connection 1`] = `
"DetoxInternalError: Cannot unregister an unknown WebSocket instance.
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;

exports[`Detox server integration edge cases login - empty .params 1`] = `
"Invalid login action received, it has no .params

HINT: Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues

{
  type: 'login'
}"
`;

exports[`Detox server integration edge cases login - invalid .role 1`] = `
"Invalid login action received, it has invalid .role

HINT: Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues

{
  type: 'login',
  params: {
    sessionId: 'Session',
    role: 'Meteora'
  }
}"
`;

exports[`Detox server integration edge cases login - missing .sessionId 1`] = `
"Invalid login action received, it has no .sessionId

HINT: Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues

{
  type: 'login',
  params: {
    sessionId: '',
    role: 'tester'
  }
}"
`;

exports[`Detox server integration edge cases login - non-string .sessionId 1`] = `
"Invalid login action received, it has a non-string .sessionId

HINT: Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues

{
  type: 'login',
  params: {
    sessionId: {
      '0': 2
    },
    role: 'tester'
  }
}"
`;

exports[`Detox server integration edge cases login twice (as app) 1`] = `
"DetoxInternalError: Cannot log in twice into the same session (aSession) being \\"app\\" already
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;

exports[`Detox server integration edge cases login twice (as tester) + socket send error 1`] = `
"Cannot forward the error details to the tester due to the error:
Error: TestError"
`;

exports[`Detox server integration edge cases login twice (as tester) + socket send error 2`] = `
"DetoxInternalError: Cannot log in twice into the same session (aSession) being \\"tester\\" already
Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;

exports[`Detox server integration edge cases on(message) - malformed data 1`] = `
"The payload received is not a valid JSON.

HINT: Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues"
`;

exports[`Detox server integration edge cases on(message) - no .type 1`] = `
"Cannot process an action without a type.

HINT: Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues

{
  some: 'message'
}"
`;

exports[`Detox server integration edge cases receiving an action before we login 1`] = `
"Action dispatched too early, there is no session to use:

HINT: Please report this issue on our GitHub tracker:
https://github.com/wix/Detox/issues

{
  type: 'reloadReactNative',
  messageId: -1000
}"
`;

exports[`Detox server integration edge cases socket error 1`] = `"Error: Test error"`;

exports[`Detox server integration tester and app interconnect and then disconnect: CANNOT_FORWARD 1`] = `
"Cannot forward the message to the Detox client.

{
  type: 'currentStatus',
  messageId: 200,
  params: {
    status: 'I am fine'
  }
}"
`;
